added mailbox overlay

--- a/home/home.html
+++ b/home/home.html
@@ -27,6 +27,8 @@
         </div>
         <div id="homepageText">Welcome back.</div>
     </div>
+    <div id="backgroundOverlay"></div>
+    <div id="overlayContainer"></div>
     <div id="tooltip"></div>
     <div id="overlay"></div>
     <script src="script.js"></script>
