added about page and adjusted tooltip

--- a/home/home.html
+++ b/home/home.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+    <audio id="backgroundMusic" preload="auto" loop muted src="./src/RioTuEdIo.mp3"></audio>
     <div id="navbar">
         <div class="navButton">--</div>
         <div class="navButton"></div>
@@ -23,7 +24,8 @@
             <div id="titleText">Memory Garden</div>
             <div id="mailbox" class="headerButton alert"></div>
             <div id="profile" class="headerButton"></div>
-            <div id="date" class="headerButton">1 June 2047</div>
+            <div id="about" class="headerButton"></div>
+            <div id="date" class="">1 June 2047</div>
         </div>
         <div id="homepageText">Welcome back.</div>
     </div>
