small tweaks adn added messages

--- a/home/home.html
+++ b/home/home.html
@@ -36,7 +36,7 @@
             <div id="musicButton"></div>
         </div>
         <div id="headerBar">
-            <div id="titleText">Memory Garden</div>
+            <img id="titleText" src="./src/titlebanner.png"></img>
             <div id="mailbox" class="headerButton alert"></div>
             <div id="profile" class="headerButton"></div>
             <div id="about" class="headerButton"></div>
