aligned file names

--- a/home/home.html
+++ b/home/home.html
@@ -42,7 +42,7 @@
             <div id="about" class="headerButton"></div>
             <div id="date" class="">1 June 2047</div>
         </div>
-        <div id="homepageText">Welcome back.</div>
+        <div id="homepageText">Welcome back. Last login: 7345 days ago.</div>
     </div>
     <div id="backgroundOverlay"></div>
     <div id="overlayContainer"></div>
