--- a/hksed/index.html
+++ b/hksed/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>sedit☐on.mp4</title>
+    <title>[no-title].bin</title>
+    <link rel="icon" type="image/x-icon" href="../src/favicon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Instrument+Serif:ital@0;1&display=swap" rel="stylesheet">
@@ -40,6 +41,30 @@
     <div class="popup draggable" id="popup7">
         <div class="close">X</div>
         <img src="./yellow.jpg" alt="">
+    </div>
+    <div class="popup draggable" id="popup8">
+        <div class="close">X</div>
+        <img src="./shatin.jpg" alt="">
+    </div>
+    <div class="popup draggable" id="popup9">
+        <div class="close">X</div>
+        <img src="./taiwai.jpg" alt="">
+    </div>
+    <div class="popup draggable" id="popup10">
+        <div class="close">X</div>
+        <img src="./jumbo.jpg" alt="">
+    </div>
+    <div class="popup draggable" id="popup11">
+        <div class="close">X</div>
+        <img src="./tszwan.jpg" alt="">
+    </div>
+    <div class="popup draggable" id="popup12">
+        <div class="close">X</div>
+        <img src="./maonshan.jpg" alt="">
+    </div>
+    <div class="popup draggable" id="popup13">
+        <div class="close">X</div>
+        <img src="./kowloontong.jpg" alt="">
     </div>
     <div id="subtitles">
         <div id="text"></div>
