--- a/hksed/index.html
+++ b/hksed/index.html
@@ -16,7 +16,7 @@
 <body>
     <div class="popup draggable" id="popup1">
         <div class="close">X</div>
-        <img src="./banner1.jpg" alt="">
+        <img src="./banner.gif" alt="">
     </div>
     <div class="popup draggable" id="popup2">
         <div class="close">X</div>
@@ -24,47 +24,75 @@
     </div>
     <div class="popup draggable" id="popup3">
         <div class="close">X</div>
-        <img src="./crowd.jpg" alt="">
+        <img src="./crowd.gif" alt="">
     </div>
     <div class="popup draggable" id="popup4">
         <div class="close">X</div>
-        <img src="./map.jpg" alt="">
+        <img src="./error.png" alt="">
     </div>
     <div class="popup draggable" id="popup5">
         <div class="close">X</div>
-        <img src="./stepdown.jpg" alt="">
+        <img src="./error.png" alt="">
     </div>
     <div class="popup draggable" id="popup6">
         <div class="close">X</div>
-        <img src="./lionrock.jpg" alt="">
+        <img src="./map.jpg" alt="">
     </div>
     <div class="popup draggable" id="popup7">
         <div class="close">X</div>
-        <img src="./yellow.jpg" alt="">
+        <img src="./stepdown.jpg" alt="">
     </div>
     <div class="popup draggable" id="popup8">
         <div class="close">X</div>
-        <img src="./shatin.jpg" alt="">
+        <img src="./error.png" alt="">
     </div>
     <div class="popup draggable" id="popup9">
         <div class="close">X</div>
-        <img src="./taiwai.jpg" alt="">
+        <img src="./lionrock.jpg" alt="">
     </div>
     <div class="popup draggable" id="popup10">
         <div class="close">X</div>
-        <img src="./jumbo.jpg" alt="">
+        <img src="./error.png" alt="">
     </div>
     <div class="popup draggable" id="popup11">
         <div class="close">X</div>
-        <img src="./tszwan.jpg" alt="">
+        <img src="./yellow.jpg" alt="">
     </div>
     <div class="popup draggable" id="popup12">
         <div class="close">X</div>
-        <img src="./maonshan.jpg" alt="">
+        <img src="./shatin.jpg" alt="">
     </div>
     <div class="popup draggable" id="popup13">
         <div class="close">X</div>
-        <img src="./kowloontong.jpg" alt="">
+        <img src="./taiwai.jpg" alt="">
+    </div>
+    <div class="popup draggable" id="popup14">
+        <div class="close">X</div>
+        <img src="./error.png" alt="">
+    </div>
+    <div class="popup draggable" id="popup15">
+        <div class="close">X</div>
+        <img src="./jumbo.png" alt="">
+    </div>
+    <div class="popup draggable" id="popup16">
+        <div class="close">X</div>
+        <img src="./tszwan.jpg" alt="">
+    </div>
+    <div class="popup draggable" id="popup17">
+        <div class="close">X</div>
+        <img src="./maonshan.jpg" alt="">
+    </div>
+    <div class="popup draggable" id="popup18">
+        <div class="close">X</div>
+        <img src="./kowloontong.png" alt="">
+    </div>
+    <div class="popup draggable" id="popup19">
+        <div class="close">X</div>
+        <img src="./error.png" alt="">
+    </div>
+    <div class="popup draggable" id="popup20">
+        <div class="close">X</div>
+        <img src="./error.png" alt="">
     </div>
     <div id="subtitles">
         <div id="text"></div>
