--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Instrument+Serif:ital@0;1&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -23,6 +24,7 @@
     <div id="mainscreen"></div>
     <div id="tooltip"></div>
     <div id="overlay"></div>
+    <script src="https://cdn.jsdelivr.net/npm/powerglitch@latest/dist/powerglitch.min.js"></script>
     <script src="script.js"></script>
 </body>
 
