added glitched images + chatbox page

--- a/hksed/index.html
+++ b/hksed/index.html
@@ -40,7 +40,7 @@
     </div>
     <div class="popup draggable" id="popup7">
         <div class="close">X</div>
-        <img src="./stepdown.jpg" alt="">
+        <img src="./stepdown.gif" alt="">
     </div>
     <div class="popup draggable" id="popup8">
         <div class="close">X</div>
@@ -60,7 +60,7 @@
     </div>
     <div class="popup draggable" id="popup12">
         <div class="close">X</div>
-        <img src="./shatin.jpg" alt="">
+        <img src="./shatin.gif" alt="">
     </div>
     <div class="popup draggable" id="popup13">
         <div class="close">X</div>
@@ -76,7 +76,7 @@
     </div>
     <div class="popup draggable" id="popup16">
         <div class="close">X</div>
-        <img src="./tszwan.jpg" alt="">
+        <img src="./tszwan.png" alt="">
     </div>
     <div class="popup draggable" id="popup17">
         <div class="close">X</div>
