--- a/phone/index.html
+++ b/phone/index.html
@@ -12,13 +12,16 @@
 <body>
     <video id="bgVideo" autoplay muted loop playsinline></video>
     <img id="bgImage" alt="" />
-    <div class="chatbox" id="chatbox">
-        <div class="message bot">🤖 are you going?</div>
+    <div class="" id="chatbox">
+        <div class="message bot glitch layers">
+            <div class="messageIcon"><b>her</b></div>
+            <div class="messageText">are you going? <br> 你嚟唔嚟?</div>
+        </div>
     </div>
 
     <form id="chat-form">
         <select id="answer"></select>
-        <button type="submit">send</button>
+        <button class="jitter" type="submit">send</button>
     </form>
 
     <script src="script.js"></script>
