updated styling + finished one memory

--- a/hksed/index.html
+++ b/hksed/index.html
@@ -15,83 +15,83 @@
 
 <body>
     <div class="popup draggable" id="popup1">
-        <div class="close">X</div>
+        <div class="close">&times;</div>
         <img src="./banner.gif" alt="">
     </div>
     <div class="popup draggable" id="popup2">
-        <div class="close">X</div>
+        <div class="close">&times;</div>
         <img src="./uniform.jpg" alt="">
     </div>
-    <div class="popup draggable" id="popup3">
-        <div class="close">X</div>
+    <div class="popup draggable " id="popup3">
+        <div class="close">&times;</div>
         <img src="./crowd.gif" alt="">
     </div>
     <div class="popup draggable" id="popup4">
-        <div class="close">X</div>
+        <div class="close">&times;</div>
         <img src="./error.png" alt="">
     </div>
     <div class="popup draggable" id="popup5">
-        <div class="close">X</div>
+        <div class="close">&times;</div>
         <img src="./error.png" alt="">
     </div>
-    <div class="popup draggable" id="popup6">
-        <div class="close">X</div>
+    <div class="popup draggable " id="popup6">
+        <div class="close">&times;</div>
         <img src="./map.jpg" alt="">
     </div>
-    <div class="popup draggable" id="popup7">
-        <div class="close">X</div>
+    <div class="popup draggable " id="popup7">
+        <div class="close">&times;</div>
         <img src="./stepdown.gif" alt="">
     </div>
     <div class="popup draggable" id="popup8">
-        <div class="close">X</div>
+        <div class="close">&times;</div>
         <img src="./error.png" alt="">
     </div>
-    <div class="popup draggable" id="popup9">
-        <div class="close">X</div>
+    <div class="popup draggable " id="popup9">
+        <div class="close">&times;</div>
         <img src="./lionrock.jpg" alt="">
     </div>
     <div class="popup draggable" id="popup10">
-        <div class="close">X</div>
+        <div class="close">&times;</div>
         <img src="./error.png" alt="">
     </div>
     <div class="popup draggable" id="popup11">
-        <div class="close">X</div>
+        <div class="close">&times;</div>
         <img src="./yellow.jpg" alt="">
     </div>
-    <div class="popup draggable" id="popup12">
-        <div class="close">X</div>
+    <div class="popup draggable " id="popup12">
+        <div class="close">&times;</div>
         <img src="./shatin.gif" alt="">
     </div>
     <div class="popup draggable" id="popup13">
-        <div class="close">X</div>
+        <div class="close">&times;</div>
         <img src="./taiwai.jpg" alt="">
     </div>
-    <div class="popup draggable" id="popup14">
-        <div class="close">X</div>
+    <div class="popup draggable " id="popup14">
+        <div class="close">&times;</div>
         <img src="./error.png" alt="">
     </div>
     <div class="popup draggable" id="popup15">
-        <div class="close">X</div>
+        <div class="close">&times;</div>
         <img src="./jumbo.png" alt="">
     </div>
-    <div class="popup draggable" id="popup16">
-        <div class="close">X</div>
+    <div class="popup draggable " id="popup16">
+        <div class="close">&times;</div>
         <img src="./tszwan.png" alt="">
     </div>
     <div class="popup draggable" id="popup17">
-        <div class="close">X</div>
-        <img src="./maonshan.jpg" alt="">
+        <div class="close">&times;</div>
+        <img src="./maonshan.png" alt="">
     </div>
     <div class="popup draggable" id="popup18">
-        <div class="close">X</div>
+        <div class="close">&times;</div>
         <img src="./kowloontong.png" alt="">
     </div>
-    <div class="popup draggable" id="popup19">
-        <div class="close">X</div>
+    <div class="popup draggable " id="popup19">
+        <div class="close">&times;</div>
         <img src="./error.png" alt="">
     </div>
     <div class="popup draggable" id="popup20">
-        <div class="close">X</div>
+        <div class="close">&times;</div>
         <img src="./error.png" alt="">
     </div>
     <div id="subtitles">
