--- a/index.html
+++ b/index.html
@@ -19,11 +19,13 @@
     <div id="navbar">
         <div class="navButton">--</div>
         <div class="navButton"></div>
-        <div class="navButton">X</div>
+        <div class="navButton">&times;</div>
     </div>
     <div id="mainscreen"></div>
+
     <div id="tooltip"></div>
     <div id="overlay"></div>
+
     <script src="https://cdn.jsdelivr.net/npm/powerglitch@latest/dist/powerglitch.min.js"></script>
     <script src="script.js"></script>
 </body>
