add chain and flower pages

--- a/home/home.html
+++ b/home/home.html
@@ -50,7 +50,7 @@
         <span id="warningMessage"><b>Memory Garden - A Final Bloom</b>
             <br><br>
 
-            Dear Gardeners,
+            Dearest Gardener,
             <br><br>
             In the quiet stillness of time, we announce that <i>Memory Garden</i> will no longer be updated. The garden
             will
