addded chain memory

--- a/chain/index.html
+++ b/chain/index.html
@@ -12,32 +12,68 @@
 <body>
     <div id="gridContainer">
         <div class="column">
-            <div class="cell show" id="cell1"></div>
-            <div class="cell" id="cell2"></div>
-            <div class="cell" id="cell3"></div>
-            <div class="cell show" id="cell4"></div>
+            <div class="cell" id="cell1">
+                <div id="chain1" class="chain show"></div>
+            </div>
+            <div class="cell" id="cell2">
+                <div id="chain2" class="chain"></div>
+            </div>
+            <div class="cell" id="cell3">
+                <div id="chain3" class="chain"></div>
+            </div>
+            <div class="cell" id="cell4">
+                <div id="chain4" class="chain show"></div>
+            </div>
         </div>
         <div class="column">
-            <div class="cell" id="cell5"></div>
-            <div class="cell show" id="cell6"></div>
-            <div class="cell" id="cell7"></div>
+            <div class="cell" id="cell5">
+                <div id="chain5" class="chain"></div>
+            </div>
+            <div class="cell show" id="cell6">
+                <div id="chain6" class="chain"></div>
+            </div>
+            <div class="cell" id="cell7">
+                <div id="chain7" class="chain"></div>
+            </div>
         </div>
         <div class="column">
-            <div class="cell show" id="cell8"></div>
-            <div class="cell show" id="cell9"></div>
-            <div class="cell" id="cell10"></div>
+            <div class="cell show" id="cell8">
+                <div id="chain8" class="chain show"></div>
+            </div>
+            <div class="cell show" id="cell9">
+                <div id="chain9" class="chain show"></div>
+            </div>
+            <div class="cell" id="cell10">
+                <div id="chain10" class="chain"></div>
+            </div>
         </div>
         <div class="column">
-            <div class="cell" id="cell11"></div>
-            <div class="cell show" id="cell12"></div>
-            <div class="cell" id="cell13"></div>
-            <div class="cell" id="cell14"></div>
-            <div class="cell show" id="cell15"></div>
+            <div class="cell" id="cell11">
+                <div id="chain11" class="chain"></div>
+            </div>
+            <div class="cell" id="cell12">
+                <div id="chain12" class="chain show"></div>
+            </div>
+            <div class="cell" id="cell13">
+                <div id="chain13" class="chain"></div>
+            </div>
+            <div class="cell" id="cell14">
+                <div id="chain14" class="chain"></div>
+            </div>
+            <div class="cell" id="cell15">
+                <div id="chain15" class="chain show"></div>
+            </div>
         </div>
         <div class="column">
-            <div class="cell" id="cell16"></div>
-            <div class="cell show" id="cell17"></div>
-            <div class="cell show" id="cell18"></div>
+            <div class="cell" id="cell16">
+                <div id="chain16" class="chain"></div>
+            </div>
+            <div class="cell" id="cell17">
+                <div id="chain17" class="chain show"></div>
+            </div>
+            <div class="cell" id="cell18">
+                <div id="chain18" class="chain show"></div>
+            </div>
         </div>
     </div>
     <script src="script.js"></script>
