--- a/chain/index.html
+++ b/chain/index.html
@@ -29,18 +29,18 @@
             <div class="cell" id="cell5">
                 <div id="chain5" class="chain"></div>
             </div>
-            <div class="cell show" id="cell6">
-                <div id="chain6" class="chain"></div>
+            <div class="cell" id="cell6">
+                <div id="chain6" class="chain show"></div>
             </div>
             <div class="cell" id="cell7">
                 <div id="chain7" class="chain"></div>
             </div>
         </div>
         <div class="column">
-            <div class="cell show" id="cell8">
+            <div class="cell" id="cell8">
                 <div id="chain8" class="chain show"></div>
             </div>
-            <div class="cell show" id="cell9">
+            <div class="cell" id="cell9">
                 <div id="chain9" class="chain show"></div>
             </div>
             <div class="cell" id="cell10">
