final updates for may2 deadline

--- a/chain/index.html
+++ b/chain/index.html
@@ -13,16 +13,16 @@
     <div id="gridContainer">
         <div class="column">
             <div class="cell" id="cell1">
-                <div id="chain1" class="chain show"></div>
+                <div id="chain1" class="chain show glitch"></div>
             </div>
             <div class="cell" id="cell2">
                 <div id="chain2" class="chain"></div>
             </div>
             <div class="cell" id="cell3">
-                <div id="chain3" class="chain"></div>
+                <div id="chain3" class="chain "></div>
             </div>
             <div class="cell" id="cell4">
-                <div id="chain4" class="chain show"></div>
+                <div id="chain4" class="chain show glitch"></div>
             </div>
         </div>
         <div class="column">
@@ -33,7 +33,7 @@
                 <div id="chain6" class="chain show"></div>
             </div>
             <div class="cell" id="cell7">
-                <div id="chain7" class="chain"></div>
+                <div id="chain7" class="chain "></div>
             </div>
         </div>
         <div class="column">
@@ -52,10 +52,10 @@
                 <div id="chain11" class="chain"></div>
             </div>
             <div class="cell" id="cell12">
-                <div id="chain12" class="chain show"></div>
+                <div id="chain12" class="chain show glitch"></div>
             </div>
             <div class="cell" id="cell13">
-                <div id="chain13" class="chain"></div>
+                <div id="chain13" class="chain glitch"></div>
             </div>
             <div class="cell" id="cell14">
                 <div id="chain14" class="chain"></div>
@@ -66,16 +66,18 @@
         </div>
         <div class="column">
             <div class="cell" id="cell16">
-                <div id="chain16" class="chain"></div>
+                <div id="chain16" class="chain "></div>
             </div>
             <div class="cell" id="cell17">
-                <div id="chain17" class="chain show"></div>
+                <div id="chain17" class="chain show "></div>
             </div>
             <div class="cell" id="cell18">
                 <div id="chain18" class="chain show"></div>
             </div>
         </div>
     </div>
+    <div id="overlay"></div>
+
     <script src="script.js"></script>
 </body>
 
