--- a/phone/index.html
+++ b/phone/index.html
@@ -23,6 +23,7 @@
         <select id="answer"></select>
         <button class="jitter" type="submit">send</button>
     </form>
+    <!-- <div id="overlay"></div> -->
 
     <script src="script.js"></script>
 </body>
